<?xml version="1.0"?>
<package format="2">
  <name>ros_control_boilerplate</name>
  <version>0.4.1</version>
  <description>Simple simulation interface and template for setting up a hardware interface for ros_control</description>

  <author email="programmers@team900.org">Dave Coleman</author>
  <maintainer email="programmers@team900.org">Dave Coleman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>as726x_interface</depend>
  <depend>cmake_modules</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>actionlib</depend>
  <depend>urdf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>talon_interface</depend>
  <depend>message_runtime</depend>
  <depend>frc_interfaces</depend>
  <depend>frc_msgs</depend>
  <depend>remote_joint_interface</depend>

  <export>
  </export>
</package>
