<package format="2">
  <name>talon_controllers</name>
  <version>0.1.0</version>
  <description>talon_controllers</description>

  <maintainer email="programmers@team900.org">FRC900 Programmers</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/FRC900</url>

  <author>Team900 Programmers</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>ctre_interfaces</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>ddr_updater</depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>talon_controller_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/talon_controllers_plugins.xml"/>
    <controller_interface plugin="${prefix}/talonfxpro_controllers_plugins.xml"/>
    <controller_interface plugin="${prefix}/orchestra_controller_plugins.xml"/>
  </export>
</package>

