<package format="2">
  <name>talon_state_controller</name>
  <version>0.0.1</version>
  <description>Controller to publish talon state</description>
  <maintainer email="programmers@team900.org">FRC Team 900 Programmers</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/FRC900/2017Preseason/tree/master/zebROS_ws/src</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url> 
  <url type="repository">https://github.com/FRC900/2017Preseason</url>

  <author>Team 900</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>talon_interface</depend>
  <depend>talon_state_msgs</depend>
  <depend>periodic_interval_counter</depend>
  <test_depend>rostest</test_depend>

  <export>
    <controller_interface plugin="${prefix}/talon_state_plugin.xml"/>
  </export>
</package>
