<package format="2">
  <name>talon_swerve_drive_controller</name>
  <version>0.13.1</version>
  <description>Controller for a swerve drive mobile base.</description>
  <maintainer email="programmers@team900.org">FRC Team 900 Programmers</maintainer>
  <author email="programmers@team900.org">FRC Team 900 Programmers</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>roscpp</depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>realtime_tools</depend>
  <depend>talon_controllers</depend>
  <depend>talon_interface</depend>
  <depend>talon_state_msgs</depend>
  <depend>tf</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>

  <test_depend>rostest</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/talon_swerve_drive_controller_plugins.xml"/>
  </export>
</package>
